--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "pinia": "^2.0.36",
     "vue": "^3.3.2",
     "vue-chartjs": "^5.2.0",
-    "vue-router": "^4.2.0"
+    "vue-latest-table": "^1.0.5",
+    "vue-router": "^4.2.0",
+    "vue-table-dynamic": "^0.4.10",
+    "vue3-easy-data-table": "^1.5.45"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
