--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
+    "flatpickr": "^4.6.13",
     "pinia": "^2.0.36",
     "vue": "^3.3.2",
     "vue-chartjs": "^5.2.0",
