--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@mdi/font": "^7.2.96",
+    "@mdi/js": "^7.2.96",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
     "pinia": "^2.0.36",
